--- a/bundles/auth/form/pom.xml
+++ b/bundles/auth/form/pom.xml
@@ -96,6 +96,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.auth.core</artifactId>
             <version>1.1.0</version>
