SLING-2987 - improved webconsole plugin
git-svn-id: https://svn.apache.org/repos/asf/sling/branches/SLING-2987-healthcheck-redesign@1510874 13f79535-47bb-0310-9956-ffa450edef68

--- a/hc-core/src/main/resources/res/ui/healthcheck.css
+++ b/hc-core/src/main/resources/res/ui/healthcheck.css
@@ -32,7 +32,12 @@
     font-weight:bold;
 }
 
-.healthcheck .nothingToReport {
+.healthcheck .resultOktrue {
 	color:green;
+    font-weight:bold;
+}
+
+.healthcheck .resultOkfalse {
+    color:red;
     font-weight:bold;
 }
