--- a/src/main/resources/res/ui/healthcheck.css
+++ b/src/main/resources/res/ui/healthcheck.css
@@ -32,7 +32,12 @@
     font-weight:bold;
 }
 
-.healthcheck .nothingToReport {
+.healthcheck .resultOktrue {
 	color:green;
+    font-weight:bold;
+}
+
+.healthcheck .resultOkfalse {
+    color:red;
     font-weight:bold;
 }
