SLING-2987 - refactor API, especially the Result model
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1513154 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/healthcheck/core/src/main/resources/res/ui/healthcheck.css
+++ b/contrib/extensions/healthcheck/core/src/main/resources/res/ui/healthcheck.css
@@ -23,7 +23,10 @@
     color:blue;
 }
 
-.healthcheck .logWARN {
+.healthcheck .logWARN,
+.healthcheck .logSECURITY,
+.healthcheck .logCONFIG
+{
     color:red;
 }
 
