--- a/src/main/resources/res/ui/healthcheck.css
+++ b/src/main/resources/res/ui/healthcheck.css
@@ -23,7 +23,10 @@
     color:blue;
 }
 
-.healthcheck .logWARN {
+.healthcheck .logWARN,
+.healthcheck .logSECURITY,
+.healthcheck .logCONFIG
+{
     color:red;
 }
 
