--- a/src/main/resources/res/ui/healthcheck.css
+++ b/src/main/resources/res/ui/healthcheck.css
@@ -24,8 +24,8 @@
 }
 
 .healthcheck .logWARN,
-.healthcheck .logSECURITY,
-.healthcheck .logCONFIG
+.healthcheck .logCRITICAL,
+.healthcheck .logHEALTH_CHECK_ERROR
 {
     color:red;
 }
