SLING-3020 - error reporting tweaks
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1514300 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/healthcheck/webconsole/src/main/resources/res/ui/healthcheck.css
+++ b/contrib/extensions/healthcheck/webconsole/src/main/resources/res/ui/healthcheck.css
@@ -24,8 +24,8 @@
 }
 
 .healthcheck .logWARN,
-.healthcheck .logSECURITY,
-.healthcheck .logCONFIG
+.healthcheck .logCRITICAL,
+.healthcheck .logHEALTH_CHECK_ERROR
 {
     color:red;
 }
