SLING-3960 - adding validation to adapters and adaptables, both at registration time and in the web console.
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1626854 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/adapter/src/main/resources/res/ui/adapters.css
+++ b/bundles/extensions/adapter/src/main/resources/res/ui/adapters.css
@@ -16,5 +16,9 @@
  */
  
 table.adapters tr .header {
-	background-image: none;
+    background-image: none;
+}
+
+table.adapters tr .error {
+    color: red;
 }
