--- a/samples/fling/src/main/resources/apps/fling/page/fragments/head.html
+++ b/samples/fling/src/main/resources/apps/fling/page/fragments/head.html
@@ -18,7 +18,7 @@
     under the License.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xml:lang="en">
 <head th:fragment="default">
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
