SLING-4172 - change style of modal dialogs,  contributed by Sandro Boehme, thanks!
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1640933 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/explorers/resourceeditor/src/main/less/reseditor/modals.less
+++ b/contrib/explorers/resourceeditor/src/main/less/reseditor/modals.less
@@ -6,5 +6,9 @@
 
 // Base modal
 .modal {
-  background-color: @dark-gray;
+	background-color: transparent;
+}
+
+.modal-body, .modal-header {
+	text-shadow: none;
 }
