--- a/contrib/explorers/resourceeditor/src/main/less/reseditor/variables.less
+++ b/contrib/explorers/resourceeditor/src/main/less/reseditor/variables.less
@@ -1,3 +1,8 @@
+//== Colors
+//
+//## Gray and brand colors for use across Bootstrap.
+@brand-primary:         #2D373D;
+
 // Scaffolding
 // -------------------------
 @bodyBackground:	transparent;
