SLING-4208 - add links to tests on the JUnit servlet page - contributed by Ben Helleman, thanks!
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/testing/junit/core@1642276 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/junit.css
+++ b/src/main/resources/junit.css
@@ -52,3 +52,12 @@ h2,h3,h4 {
 .note {
   font-size:80%;    
 }
+
+ul li .link a {
+    font-size: 90%;
+    text-decoration: none;
+}
+
+ul li .link a:visited {
+    color: rgb(0, 0, 238);
+}
