--- a/contrib/explorers/resourceeditor/src/main/less/reseditor/forms.less
+++ b/contrib/explorers/resourceeditor/src/main/less/reseditor/forms.less
@@ -30,3 +30,8 @@
 .form-group {
 	margin-bottom: 0;
 }
+
+// vertical-form is a custom class
+.modal-body.vertical-form label {
+	display: block;
+}
