SLING-4456 change Fling sample pages to HTML5 with data-th-* attributes
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1661736 13f79535-47bb-0310-9956-ffa450edef68

--- a/samples/fling/src/main/resources/apps/fling/page/fragments/head.html
+++ b/samples/fling/src/main/resources/apps/fling/page/fragments/head.html
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html>
 <!--
     Licensed to the Apache Software Foundation (ASF) under one
     or more contributor license agreements.  See the NOTICE file
@@ -17,12 +17,11 @@
     specific language governing permissions and limitations
     under the License.
 -->
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xml:lang="en">
-<head th:fragment="default">
+<html>
+<head data-th-fragment="default">
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title th:text="${page.title}">Page Title</title>
+  <title data-th-text="${page.title}">Page Title</title>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="/fling/assets/css/fling.css"/>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
